--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@tanstack/react-query": "^5.7.2",
     "axios": "^1.6.0",
     "firebase": "^10.5.2",
+    "form-data": "^4.0.0",
     "framer-motion": "^10.16.4",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
+    "mailgun.js": "^9.3.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.21.0",
